# TaskManager

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  help.txt
logging/: Logging.cpp  Logging.h
protobuf/: Service.proto  Task.proto  TaskDTO.proto  TaskId.proto  TaskToSerialize.proto
src/: client.cpp  main.cpp  server.cpp
src/cli/: ConcreteCommands.h  ConsoleManipulator.cpp  ConsoleManipulator.h  ConsolePrinter.cpp  ConsolePrinter.h  Context.cpp  Context.h  MachineStates.cpp  MachineStates.h  MachineSteps.h  Readers.cpp  State.cpp  State.h  StateMachine.cpp  StateMachine.h  Step.cpp  Step.h  StepDependency.cpp  StepDependency.h  StepFactory.cpp  StepFactory.h  StepId.h  StepMachine.cpp  StepMachine.h  TaskStorage.cpp  TaskStorage.h  Validators.cpp  Validators.h  main.cpp
src/cli/commands/: AddCommand.cpp  CompleteCommand.cpp  DeleteCommand.cpp  EditCommand.cpp  LoadCommand.cpp  SaveCommand.cpp  ShowCommand.cpp
src/cli/headers/: Context.h  Step.h  TaskStruct.h
src/cli/imp/: ConsoleManipulator.cpp  Context.cpp  Readers.cpp  Step.cpp  StepFactory.cpp  StepMachine.cpp  TaskStorage.cpp  TaskStruct.cpp  Validators.cpp
src/cli/impl/: ConsoleManipulator.cpp  Context.cpp  Readers.cpp  StepDependency.cpp  StepFactory.cpp  StepMachine.cpp  TaskStorage.cpp  TaskStruct.cpp  Validators.cpp  VariableSet.cpp  VariableSetBuilder.cpp
src/cli/include/: ConcreteCommands.h  ConsoleManipulator.h  Context.h  MachineSteps.h  Readers.h  Step.h  StepDependency.h  StepFactory.h  StepId.h  StepMachine.h  TaskStorage.h  TaskStruct.h  Validators.h  VariableSet.h  VariableSetBuilder.h
src/cli/states/: AddStep.cpp  CompleteStep.cpp  DeleteStep.cpp  EditStep.cpp  ExitStep.cpp  HelpStep.cpp  MachineStates.cpp  MachineStates.h  MachineSteps.cpp  MachineSteps.h  RootStep.cpp  ShowStep.cpp
src/cli/steps/: AddStep.cpp  CompleteStep.cpp  DeleteStep.cpp  EditStep.cpp  ErrorStep.cpp  ExitStep.cpp  HelpStep.cpp  LoadStep.cpp  RootStep.cpp  SaveStep.cpp  ShowStep.cpp  StepWithDependency.cpp  UpdateStep.cpp
src/common/: Command.h  CommandResponse.cpp  CommandResponse.h  Model.h  ModelController.h  ModelResponse.cpp  Persister.h  RemoteController.cpp  RemoteController.h  View.h
src/common/impl/: CommandResponse.cpp  ModelResponse.cpp
src/common/include/: Command.h  CommandResponse.h  Model.h  ModelController.h  ModelResponse.h
src/controller/: RemoteController.cpp  RemoteController.h  main.cpp
src/controller/imp/: Command.cpp  CommandFactory.cpp  Controller.cpp  ModelResponse.cpp  Response.cpp  TaskStorage.cpp
src/controller/impl/: CommandFactory.cpp  ContextDTO.cpp  Controller.cpp  ModelController.cpp  ModelResponse.cpp
src/controller/include/: Command.h  CommandFactory.h  ConcreteCommands.h  ContextDTO.h  Controller.h  IModel.h  IView.h  Model.h  ModelController.h  OperationType.h  Persister.h  Response.h  TaskStorage.h  TaskStruct.h  View.h
src/model/: FamilyTask.cpp  FamilyTask.h  IdGenerator.cpp  IdGenerator.h  Task.cpp  Task.h  TaskId.cpp  TaskId.h  TaskManager.cpp  TaskManager.h  TaskNode.cpp  main.cpp
src/model/headers/: TaskId.h
src/model/imp/: FamilyTask.cpp  IdGenerator.cpp  Task.cpp  TaskId.cpp  TaskManager.cpp  TaskToSerialize.cpp
src/model/impl/: FamilyTask.cpp  IdGenerator.cpp  TaskManager.cpp  TaskNode.cpp
src/model/include/: FamilyTask.h  IdGenerator.h  Task.h  TaskId.h  TaskManager.h  TaskNode.h  TaskToSerialize.h
src/persistence/: FilePersister.cpp  FilePersister.h
src/persistence/imp/: TaskPersister.cpp
src/persistence/impl/: FilePersister.cpp  TaskPersister.cpp
src/persistence/include/: FilePersister.h  TaskPersister.h
src/server/: RequestHandlerImpl.cpp  RequestHandlerImpl.h  server.cpp
src/util/: TaskComparers.cpp  TaskComparers.h  TaskCreators.cpp  TaskCreators.h  TaskDTOComparers.cpp  TaskIdComparers.cpp  TaskIdComparers.h  TaskIdCreators.cpp  TaskIdCreators.h  TaskToSerializeComparers.cpp  TaskToSerializeComparers.h  TaskToSerializeCreators.cpp  TaskToSerializeCreators.h
src/util/Response/: ModelResponseUtils.cpp  ModelResponseUtils.h  ResponseConverters.cpp  ResponseConverters.h
tests/: CMakeLists.txt  main.cpp
tests/cli/: ConsoleManipulatorTest.cpp  ContextTest.cpp  ReadersTest.cpp  StepDependencyTest.cpp  StepFactoryTest.cpp  StepMachineTest.cpp  TaskStorageTest.cpp  ValidatorsTest.cpp  VariableSetBuilderTest.cpp  VariableSetTest.cpp
tests/cli/commands/: AddCommandTest.cpp  CompleteCommandTest.cpp  DeleteCommandTest.cpp  EditCommandTest.cpp  LoadCommandTest.cpp  SaveCommand.cpp  SaveCommandTest.cpp  ShowCommandTest.cpp
tests/cli/steps/: AddStepTest.cpp  CompleteStepTest.cpp  DeleteStepTest.cpp  EditStepTest.cpp  ErrorStepTest.cpp  ExitStepTest.cpp  HelpStepTest.cpp  LoadStepTest.cpp  RootStepTest.cpp  SaveStepTest.cpp  ShowStepTest.cpp  UpdateStepTest.cpp
tests/common/: CommandResponseTest.cpp  ModelResponseTest.cpp
tests/controller/: CommandFactoryTest.cpp  ControllerTest.cpp  ModelResponseTest.cpp  RemoteControllerTest.cpp  TaskStorageTest.cpp
tests/controller/commands/: AddCommandTest.cpp  CompleteCommandTest.cpp  DeleteCommandTest.cpp  EditCommandTest.cpp  LoadCommandTest.cpp  SaveCommand.cpp  ShowCommandTest.cpp
tests/controller/mocks/: CommandFactoryMock.h  CommandMock.h  ContextDTOMock.h  ModelMock.h  ViewMock.h
tests/integration/: DefaultModelController.cpp  DefaultModelController.h  MultipleClientsTest.cpp  RandomCommandGenerator.cpp  RandomCommandGenerator.h  ScenariosTest.cpp
tests/mocks/: CommandMock.h  ConsoleManipulatorMock.h  ModelControllerMock.h  ModelMock.h  PersisterMock.h  StepDependencyMock.h  StepFactoryMock.h  StepMock.h  ViewMock.h
tests/model/: FamilyTaskTest.cpp  IdGeneratorTest.cpp  TaskIdTest.cpp  TaskManagerTest.cpp  TaskNodeTest.cpp  TaskTest.cpp
tests/persistence/: TaskPersistenceTest.cpp
tests/server/: RequestHandlerImplTest.cpp
tests/util/: ModelResponseUtilsTest.cpp  ResponseConvertersTest.cpp  TaskDTOUtilsTest.cpp  TaskIdUtilsTest.cpp  TaskUtilsTest.cpp
utils/imp/: TaskComparers.cpp  TaskStructuresCreate.cpp
utils/include/: TaskComparers.h  TaskStructuresCreate.h
(+63 files in other folders)
